--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,17 @@
 	],
 	"require": {
 		"php": ">=7.1",
-		"nette/application": "^3.0",
-		"nette/bootstrap": "^3.0",
-		"nette/caching": "^3.0",
-		"nette/di": "^3.0",
-		"nette/http": "^3.0",
-		"tracy/tracy": "^2.6",
-		"symfony/browser-kit": "^5.0"
+		"nette/application": "^3.2",
+		"nette/bootstrap": "^3.2",
+		"nette/caching": "^3.2",
+		"nette/di": "^3.1",
+		"nette/http": "^3.2",
+		"tracy/tracy": "^2.10",
+		"symfony/browser-kit": "^5.0 || ^6.0"
 	},
 	"require-dev": {
-		"nette/tester": "^1.3 | ^2.0",
-		"mockery/mockery": "^0.9.4 | ^1.0"
+		"nette/tester": "^2.0",
+		"mockery/mockery": "^1.0"
 	},
 	"suggest": {
 		"symfony/css-selector": "To use CSS selectors with DomCrawler."
